[gd_scene load_steps=4 format=3 uid="uid://cgfkak77g4ppd"]

[ext_resource type="Script" path="res://gui/main_menu.gd" id="1_80pii"]
[ext_resource type="PackedScene" uid="uid://c5tis4nwwokaq" path="res://gui/options.tscn" id="1_jc6uj"]
[ext_resource type="PackedScene" uid="uid://brvbaih0vle15" path="res://gui/levelSelect.tscn" id="3_fhyk1"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_80pii")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 124.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.64457, 3.23546)
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 456.0
offset_top = 152.0
offset_right = 575.0
offset_bottom = 328.0
scale = Vector2(2, 2)
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="LevelSelect" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Options" parent="." node_paths=PackedStringArray("previousMenu") instance=ExtResource("1_jc6uj")]
visible = false
offset_left = 1.0
offset_top = 245.0
offset_right = 1153.0
offset_bottom = 648.0
reloadOnBack = true
previousMenu = NodePath("../MarginContainer")

[node name="levelSelect" parent="." node_paths=PackedStringArray("previousMenu") instance=ExtResource("3_fhyk1")]
visible = false
offset_left = 192.0
offset_top = 260.0
offset_right = 978.0
offset_bottom = 538.0
previousMenu = NodePath("../MarginContainer")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
